TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-02-12 MickeM
 * Added support for specifying targets on schedules:
   [/settings/scheduler/schedules/foo]
   target = foo-host
   Will re-target the NSCA (or whatever you use) towards a given target.
 * Fixed is schedule manager uses new standard object reader
 * Fixed some issues with reading schedule

2012-02-05 MickeM
 * Added test cases for targets to NRPE
 * Added test cases for targets to NSCA
 * Added test cases for lenghts to NSCA
 * Changed to python API sleep uses milliseconds (not seconds as before)
   Makes NSCA unittests go much faster (as I can wait much less)
 * Fixed a lot of bugs related to target handling.
 * implemented target refactoring on all Client modules.

2012-02-05 MickeM
 * Refactored the targets concept internally to be simpler to use (less code)
 * Fixed issue with reloading plugins
 * Fixed target handling in NRPE Client, will add NSCA client tomorrow...

2012-02-02 MickeM
 * Implemented full API for LuaScript
	Now "everything" (ish) works including channels, exec and query (via moderna API)
	Still no protocol buffer support but not sure how to play that yet so will not be avalible in 0.4.0.

2012-02-01 MickeM
 * Implemented full settings API for LuaScript (next RC will have to wait till next weekend)

2012-01-31 MickeM1
 * Fixed issue with parsing "invalid external commands".
   If parsing falies it will notify you but use the legacy split string method instead.
 * LuaScript module is now modern (ie. works with 0.4.0)
   Should be 99% compatbile (function needs to be defined before registration) but all old scripts should work now (I think)
 * LuaScript module has been modernized
   The new API is very similar to Python