@@ -34,6 +34,7 @@
 
 namespace sh = nscapi::settings_helper;
 
+const std::wstring DistributedClient::command_prefix = _T("dnscp");
 /**
 * Default c-tor
 * @return 
@@ -58,14 +59,8 @@ bool DistributedClient::loadModule() {
 bool DistributedClient::loadModuleEx(std::wstring alias, NSCAPI::moduleLoadMode mode) {
 	std::map<std::wstring,std::wstring> commands;
 
-	std::wstring certificate;
-	unsigned int timeout = 30, buffer_length = 1024;
-	bool use_ssl = true;
 	try {
 
-		register_command(_T("query_dist"), _T("Submit a query to a remote host via NSCP"));
-		register_command(_T("submit_dist"), _T("Submit a query to a remote host via NSCP"));
-		register_command(_T("exec_dist"), _T("Execute remote command on a remote host via NSCP"));
 
 		sh::settings_registry settings(get_settings_proxy());
 		settings.set_alias(_T("distributed"), alias, _T("client"));
@@ -88,44 +83,18 @@ bool DistributedClient::loadModuleEx(std::wstring alias, NSCAPI::moduleLoadMode 
 
 			;
 
-		settings.alias().add_key_to_settings(_T("targets/default"))
-
-			(_T("timeout"), sh::uint_key(&timeout, 30),
-			_T("TIMEOUT"), _T("Timeout when reading/writing packets to/from sockets."))
-
-			(_T("use ssl"), sh::bool_key(&use_ssl, true),
-			_T("ENABLE SSL ENCRYPTION"), _T("This option controls if SSL should be enabled."))
-
-			(_T("certificate"), sh::wpath_key(&certificate, _T("${certificate-path}/nrpe_dh_512.pem")),
-			_T("SSL CERTIFICATE"), _T(""))
-
-			(_T("payload length"),  sh::uint_key(&buffer_length, 1024),
-			_T("PAYLOAD LENGTH"), _T("Length of payload to/from the NRPE agent. This is a hard specific value so you have to \"configure\" (read recompile) your NRPE agent to use the same value for it to work."))
-			;
-
 		settings.register_all();
 		settings.notify();
 
-		get_core()->registerSubmissionListener(get_id(), channel_);
+		targets.add_missing(get_settings_proxy(), target_path, _T("default"), _T(""), true);
 
-		if (!targets.has_target(_T("default"))) {
-			add_target(_T("default"), _T("default"));
-			targets.rebuild();
-		}
-		nscapi::target_handler::optarget t = targets.find_target(_T("default"));
-		if (t) {
-			if (!t->has_option("certificate"))
-				t->options[_T("certificate")] = certificate;
-			if (!t->has_option("timeout"))
-				t->options[_T("timeout")] = strEx::itos(timeout);
-			if (!t->has_option("payload length"))
-				t->options[_T("payload length")] = strEx::itos(buffer_length);
-			if (!t->has_option("ssl"))
-				t->options[_T("ssl")] = use_ssl?_T("true"):_T("false");
-			targets.add(*t);
-		} else {
-			NSC_LOG_ERROR(_T("Default target not found!"));
-		}
+
+		get_core()->registerSubmissionListener(get_id(), channel_);
+		register_command(_T("dnscp_query"), _T("Submit a query to a remote host via NSCP"));
+		register_command(_T("dnscp_forward"), _T("Forward query to remote NSCP host"));
+		register_command(_T("dnscp_submit"), _T("Submit a query to a remote host via NSCP"));
+		register_command(_T("dnscp_exec"), _T("Execute remote command on a remote host via NSCP"));
+		register_command(_T("dnscp_help"), _T("Help on using NSCP Client"));
 
 	} catch (nscapi::nscapi_exception &e) {
 		NSC_LOG_ERROR_STD(_T("NSClient API exception: ") + utf8::to_unicode(e.what()));
@@ -153,20 +122,9 @@ std::string get_command(std::string alias, std::string command = "") {
 
 void DistributedClient::add_target(std::wstring key, std::wstring arg) {
 	try {
-		nscapi::target_handler::target t = targets.add(get_settings_proxy(), target_path , key, arg);
-		if (t.has_option(_T("certificate"))) {
-			boost::filesystem::wpath p = t.options[_T("certificate")];
-			if (!boost::filesystem::is_regular(p)) {
-				p = get_core()->getBasePath() / p;
-				t.options[_T("certificate")] = utf8::cvt<std::wstring>(p.string());
-				targets.add(t);
-			}
-			if (boost::filesystem::is_regular(p)) {
-				NSC_DEBUG_MSG_STD(_T("Using certificate: ") + p.string());
-			} else {
-				NSC_LOG_ERROR_STD(_T("Certificate not found: ") + p.string());
-			}
-		}
+		targets.add(get_settings_proxy(), target_path , key, arg);
+	} catch (const std::exception &e) {
+		NSC_LOG_ERROR_STD(_T("Failed to add target: ") + key + _T(", ") + utf8::to_unicode(e.what()));
 	} catch (...) {
 		NSC_LOG_ERROR_STD(_T("Failed to add target: ") + key);
 	}
@@ -194,29 +152,37 @@ bool DistributedClient::unloadModule() {
 }
 
 NSCAPI::nagiosReturn DistributedClient::handleRAWCommand(const wchar_t* char_command, const std::string &request, std::string &result) {
-	nscapi::functions::decoded_simple_command_data data = nscapi::functions::parse_simple_query_request(char_command, request);
-	std::wstring cmd = client::command_line_parser::parse_command(data.command, _T("syslog"));
+	std::wstring cmd = client::command_line_parser::parse_command(char_command, command_prefix);
+
+	Plugin::QueryRequestMessage message;
+	message.ParseFromString(request);
+
 	client::configuration config;
-	setup(config);
-	if (!client::command_line_parser::is_command(cmd))
-		return client::command_line_parser::do_execute_command_as_query(config, cmd, data.args, request, result);
-	return commands.exec_simple(config, data.target, char_command, data.args, result);
+	setup(config, message.header());
+
+	return commands.process_query(cmd, config, message, result);
 }
 
 int DistributedClient::commandRAWLineExec(const wchar_t* char_command, const std::string &request, std::string &result) {
-	nscapi::functions::decoded_simple_command_data data = nscapi::functions::parse_simple_exec_request(char_command, request);
-	std::wstring cmd = client::command_line_parser::parse_command(char_command, _T("syslog"));
-	if (!client::command_line_parser::is_command(cmd))
-		return NSCAPI::returnIgnored;
+	std::wstring cmd = client::command_line_parser::parse_command(char_command, command_prefix);
+
+	Plugin::ExecuteRequestMessage message;
+	message.ParseFromString(request);
+
 	client::configuration config;
-	setup(config);
-	return client::command_line_parser::do_execute_command_as_exec(config, cmd, data.args, result);
+	setup(config, message.header());
+
+	return commands.process_exec(cmd, config, message, result);
 }
 
 NSCAPI::nagiosReturn DistributedClient::handleRAWNotification(const wchar_t* channel, std::string request, std::string &result) {
+	Plugin::SubmitRequestMessage message;
+	message.ParseFromString(request);
+
 	client::configuration config;
-	setup(config);
-	return client::command_line_parser::do_relay_submit(config, request, result);
+	setup(config, message.header());
+
+	return client::command_line_parser::do_relay_submit(config, message, result);
 }
 
 //////////////////////////////////////////////////////////////////////////
@@ -235,29 +201,23 @@ void DistributedClient::add_local_options(po::options_description &desc, client:
 		;
 }
 
-void DistributedClient::setup(client::configuration &config) {
+void DistributedClient::setup(client::configuration &config, const ::Plugin::Common_Header& header) {
 	boost::shared_ptr<clp_handler_impl> handler = boost::shared_ptr<clp_handler_impl>(new clp_handler_impl(this));
 	add_local_options(config.local, config.data);
 
-	net::wurl url;
-	url.protocol = _T("dnscp");
-	url.port = 5669;
-	nscapi::target_handler::optarget opt = targets.find_target(_T("default"));
-	if (opt) {
-		nscapi::target_handler::target t = *opt;
-		url.host = t.host;
-		if (t.has_option("port")) {
-			try {
-				url.port = strEx::stoi(t.options[_T("port")]);
-			} catch (...) {}
-		}
-		std::string keys[] = {"certificate", "timeout", "payload length", "ssl"};
-		BOOST_FOREACH(std::string s, keys) {
-			config.data->recipient.data[s] = utf8::cvt<std::string>(t.options[utf8::cvt<std::wstring>(s)]);
-		}
+	config.data->recipient.id = header.recipient_id();
+	std::wstring recipient = utf8::cvt<std::wstring>(config.data->recipient.id);
+	if (!targets.has_object(recipient)) {
+		NSC_LOG_ERROR(_T("Target not found (using default): ") + recipient);
+		recipient = _T("default");
 	}
-	config.data->recipient.id = "default";
-	config.data->recipient.address = utf8::cvt<std::string>(url.to_string());
+	nscapi::targets::optional_target_object opt = targets.find_object(recipient);
+
+	if (opt) {
+		nscapi::targets::target_object t = *opt;
+		nscapi::functions::destination_container def = t.to_destination_container();
+		config.data->recipient.apply(def);
+	}
 	config.data->host_self.id = "self";
 	//config.data->host_self.host = hostname_;
 
@@ -265,10 +225,10 @@ void DistributedClient::setup(client::configuration &config) {
 	config.handler = handler;
 }
 
-DistributedClient::connection_data DistributedClient::parse_header(const ::Plugin::Common_Header &header) {
+DistributedClient::connection_data DistributedClient::parse_header(const ::Plugin::Common_Header &header, client::configuration::data_type data) {
 	nscapi::functions::destination_container recipient;
 	nscapi::functions::parse_destination(header, header.recipient_id(), recipient, true);
-	return connection_data(recipient);
+	return connection_data(recipient, data->recipient);
 }
 
 //////////////////////////////////////////////////////////////////////////
@@ -285,18 +245,17 @@ std::string gather_and_log_errors(std::string  &payload) {
 	}
 	return ret;
 }
-int DistributedClient::clp_handler_impl::query(client::configuration::data_type data, ::Plugin::Common_Header* header, const std::string &request, std::string &reply) {
+int DistributedClient::clp_handler_impl::query(client::configuration::data_type data, const Plugin::QueryRequestMessage &request_message, std::string &reply) {
+	const ::Plugin::Common_Header& request_header = request_message.header();
 	int ret = NSCAPI::returnUNKNOWN;
-	Plugin::QueryRequestMessage request_message;
-	request_message.ParseFromString(request);
-	connection_data con = parse_header(*header);
+	connection_data con = parse_header(request_header, data);
 
 	Plugin::QueryResponseMessage response_message;
-	nscapi::functions::make_return_header(response_message.mutable_header(), *header);
+	nscapi::functions::make_return_header(response_message.mutable_header(), request_header);
 
 	std::list<nscp::packet> chunks;
 	chunks.push_back(nscp::factory::create_envelope_request(1));
-	chunks.push_back(nscp::factory::create_payload(nscp::data::command_request, request, 0));
+	chunks.push_back(nscp::factory::create_payload(nscp::data::command_request, request_message.SerializeAsString(), 0));
 	chunks = instance->send(con, chunks);
 	BOOST_FOREACH(nscp::packet &chunk, chunks) {
 		if (nscp::checks::is_query_response(chunk)) {
@@ -315,16 +274,15 @@ int DistributedClient::clp_handler_impl::query(client::configuration::data_type 
 	return ret;
 }
 
-int DistributedClient::clp_handler_impl::submit(client::configuration::data_type data, ::Plugin::Common_Header* header, const std::string &request, std::string &reply) {
+int DistributedClient::clp_handler_impl::submit(client::configuration::data_type data, const Plugin::SubmitRequestMessage &request_message, std::string &reply) {
+	const ::Plugin::Common_Header& request_header = request_message.header();
 	int ret = NSCAPI::returnUNKNOWN;
-	Plugin::SubmitRequestMessage request_message;
-	request_message.ParseFromString(request);
-	connection_data con = parse_header(*header);
+	connection_data con = parse_header(request_header, data);
 	Plugin::SubmitResponseMessage response_message;
-	nscapi::functions::make_return_header(response_message.mutable_header(), *header);
+	nscapi::functions::make_return_header(response_message.mutable_header(), request_header);
 
 	std::list<nscp::packet> chunks;
-	chunks.push_back(nscp::factory::create_payload(nscp::data::command_response, request, 0));
+	chunks.push_back(nscp::factory::create_payload(nscp::data::command_response, request_message.SerializeAsString(), 0));
 	chunks = instance->send(con, chunks);
 	BOOST_FOREACH(nscp::packet &chunk, chunks) {
 		if (nscp::checks::is_submit_response(chunk)) {
@@ -343,18 +301,17 @@ int DistributedClient::clp_handler_impl::submit(client::configuration::data_type
 	return ret;
 }
 
-int DistributedClient::clp_handler_impl::exec(client::configuration::data_type data, ::Plugin::Common_Header* header, const std::string &request, std::string &reply) {
+int DistributedClient::clp_handler_impl::exec(client::configuration::data_type data, const Plugin::ExecuteRequestMessage &request_message, std::string &reply) {
+	const ::Plugin::Common_Header& request_header = request_message.header();
 	int ret = NSCAPI::returnOK;
-	Plugin::ExecuteRequestMessage request_message;
-	request_message.ParseFromString(request);
-	connection_data con = parse_header(*header);
+	connection_data con = parse_header(request_header, data);
 
 	Plugin::ExecuteResponseMessage response_message;
-	nscapi::functions::make_return_header(response_message.mutable_header(), *header);
+	nscapi::functions::make_return_header(response_message.mutable_header(), request_header);
 
 	std::list<nscp::packet> chunks;
 	chunks.push_back(nscp::factory::create_envelope_request(1));
-	chunks.push_back(nscp::factory::create_payload(nscp::data::exec_request, request, 0));
+	chunks.push_back(nscp::factory::create_payload(nscp::data::exec_request, request_message.SerializeAsString(), 0));
 	chunks = instance->send(con, chunks);
 	BOOST_FOREACH(nscp::packet &chunk, chunks) {
 		if (nscp::checks::is_exec_response(chunk)) {
