@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,132
-#define STRPRODUCTVER  "0,4,0,132"
-#define STRPRODUCTDATE "2012-02-12"
+#define PRODUCTVER     0,4,0,134
+#define STRPRODUCTVER  "0,4,0,134"
+#define STRPRODUCTDATE "2012-02-13"
 #endif // VERSION_HPP
